@@ -2,7 +2,9 @@
 
 	* NSTableView-test/NSTableView-test.m : 
 	Modified to use drag'n'drop.
-
+	* NSOutlineView-test/NSOutlineView-test.m 
+	Modified to use drag'n'drop.
+	
 2002-03-05  Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* NSOutlineView-test/NSOutlineView-test.m made modifications
